Revert "fix some test"
This reverts commit f70746576ee4062b9e73e5915060901be045d118.